--- a/wiperator/wiperator.entitlements
+++ b/wiperator/wiperator.entitlements
@@ -6,13 +6,13 @@
 	<true/>
 	<key>com.apple.security.device.camera</key>
 	<true/>
-	<key>com.apple.security.files.user-selected.read-write</key>
+	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
 	<key>com.apple.security.network.client</key>
 	<true/>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)com.pirklator.wiperator2</string>
+		<string>$(AppIdentifierPrefix)com.pirklator.wiperator</string>
 	</array>
 </dict>
 </plist>
