--- a/scannerators/scannerators.entitlements
+++ b/scannerators/scannerators.entitlements
@@ -12,7 +12,7 @@
 	<true/>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)com.pirklator.wiperator</string>
+		<string>$(AppIdentifierPrefix)com.pirklator.scannerators</string>
 	</array>
 </dict>
 </plist>
